--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -264,6 +264,11 @@
     color: #5f5f5f;
 }
 
+.kiwi-header .kiwi-header-topic  .topic-title{
+    background-color: #42b992;
+    color: #fff;
+}
+
 .kiwi-header .kiwi-header-buffersettings {
     border-top: 1px solid #ddd;
 }
@@ -632,7 +637,7 @@
 }
 
 .kiwi-network-name-options .kiwi--collapse {
-    background: #d16c6c;    
+    background: #d16c6c;
 }
 
 .kiwi-statebrowser-channel-leave:hover{
@@ -727,10 +732,6 @@
 
 .kiwi-statebrowser-channel.kiwi-statebrowser-channel-active {
     border-left: 3px solid #42b992;
-}
-
-.kiwi-statebrowser-divider {
-    background: rgba(255, 255, 255, 0.3);
 }
 
 .kiwi-search-channels.active{
@@ -902,7 +903,6 @@
 }
 
 .kiwi-userbox .kiwi-userbox-basicinfo {
-    width: 100%;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
