- Added in the web colours ( issue #248 ) - Styled the banned user table - Fixed a bug where nicklist would centre align usernmaes - Finally found the cause and fixed the bug where opening a buffer would cause message list to scroll to the top - Small styling changes throughout Kiwi

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -308,6 +308,11 @@
     background-color: #d16c6c;
 }
 
+.kiwi-statebrowser-channel-settings,
+.kiwi-statebrowser-channel-leave {
+    background-color: #22231f;
+}
+
 .kiwi-statebrowser-channel-settings:hover{
     background-color: #42b992;
 }
@@ -384,6 +389,15 @@
 
 .kiwi-messagelist-message--unread {
     border-left-color: #d4e5f1;
+}
+
+/* Style the banlist */
+.kiwi-channelbanlist-table-actions:hover {
+    background-color: #b9424a;
+}
+
+.kiwi-channelbanlist-table-actions:hover i {
+    color: #fff;
 }
 
 /* Topic Styling */
