Some love has been given to the 'modern' and 'compact' message list, I'm trying to keep it as close to current Kiwi as possible, Extra love given to compact on mobile also.

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -402,8 +402,8 @@
 
 /* Topic Styling */
 .kiwi-messagelist-message-topic {
-    background-color: #fff;
-    border-top: 2px solid #42b992;
+    background: rgba(0,0,0,0.02);
+    border: 2px solid #42b992;
 }
 
 .kiwi-messagelist-message-traffic-join {
