Multiple styling issues on desktop solved: issues solved: - #282 - #281 - #295 (additional help needed from Prawn, please ask Ocelot ) - #261 - #265 - #273 - #274 - #275 (hopefully I understood this one) - #278

--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -42,7 +42,7 @@ div {
     display: inline-block;
     width: 100px;
     margin-right: 1em;
-    text-align: right;
+    text-align: left;
 }
 
 .u-form .u-input,
