'show channel topic' has white text when active now, more legible

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -307,6 +307,7 @@
 .kiwi-header-options .option.topic.active,
 .kiwi-header-options .option.leave a:hover {
     background-color: #d16c6c;
+    color: #fff;
 }
 
 .kiwi-statebrowser-channel-settings,
