- #262 (dimmed username opacity ) - When hovering, username colour will now turn white

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -377,7 +377,8 @@
 }
 
 .kiwi-messagelist-message--hover a,
-.kiwi-messagelist-message--hover .kiwi-messagelist-time {
+.kiwi-messagelist-message--hover .kiwi-messagelist-time ,
+.kiwi-messagelist-message--hover .kiwi-messagelist-nick{
     color: #fff;
 }
 
