#266 - unrerad messages now have a full background colour rather than just a sidebar colour

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -403,6 +403,7 @@
 
 .kiwi-messagelist-message--unread {
     border-left-color: #d4e5f1;
+    background-color: #d4e5f1;
 }
 
 /* Style the banlist */
