--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -89,6 +89,7 @@
     border: 1px solid #ccc;
     border-bottom: 2px solid #42b992;
     background: #fff;
+    line-height: normal;
     outline-color: #42b992;
 }
 
