- Hopefully fixes the issue caused by moving the ignore user checkbox in the uservue - The dark theme should now be consistant throughout (and thus, complete :D )

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -49,7 +49,7 @@
 }
 
 .u-tabbed-content {
-    background-color: #fff;
+    background-color: #1e1e1e;
 }
 
 .u-tabbed-view-tabs {
@@ -171,6 +171,14 @@
     background: #fff;
 }
 
+.kiwi-appsettings .app-settings-block {
+    background-color: #272626;
+}
+
+.kiwi-appsettings .u-form label span {
+    color: #fff;
+}
+
 .kiwi-appsettings .title {
     background-color: #42b992;
     color: #fff;
@@ -229,7 +237,7 @@
 
 .kiwi-container-toggledraw-statebrowser,
 .kiwi-container-toggledraw-sidebar {
-    background: #fff;
+    background: #1e1e1e;
 }
 
 .kiwi-container-toggledraw-statebrowser {
@@ -259,6 +267,30 @@
 
 .kiwi-container-toggledraw-statebrowser-messagecount--highlight::after {
     border-right-color: #d62323;
+}
+
+/* Sidebar uservue colouring */
+.kiwi-userbox,
+.kiwi-userbox-usermask {
+    color: #fff;
+}
+
+.kiwi-userbox .kiwi-userbox-actions {
+    color: #fff;
+}
+
+.kiwi-userbox .kiwi-userbox-actions .u-button {
+    border-color: #fff;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+.kiwi-userbox .kiwi-userbox-actions .u-button:hover {
+    color: #fff;
+}
+
+.u-form.kiwi-ignore-user-form {
+    color: #fff;
 }
 
 /* Container Header ( ContainerHeader.vue ) */
@@ -437,9 +469,19 @@
     background: #1e1e1e;
 }
 
-.kiwi-nicklist .user-count {
+.kiwi-sidebar .u-form label input[type="text"],
+.kiwi-sidebar .u-form textarea {
+    background: #d1d1d1;
+    color: #000;
+}
+
+.kiwi-sidebar .u-form label span,
+.kiwi-nicklist .user-count,
+.kiwi-sidebar h3,
+.kiwi-channelbanlist-table {
     color: #fff;
 }
+
 
 /* Style the banlist */
 .kiwi-channelbanlist-table-actions:hover {
@@ -967,16 +1009,6 @@
 
 .kiwi-userbox .kiwi-userbox-basicinfo {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-.kiwi-userbox .kiwi-userbox-actions .u-button {
-    border: 1px solid #000;
-    color: #000;
-}
-
-.kiwi-userbox .kiwi-userbox-actions .u-button:hover {
-    background-color: #000;
-    color: #fff;
 }
 
 .kiwi-userbox-actions-op {
